--- a/frontend/src/styles/components/_contact-form.scss
+++ b/frontend/src/styles/components/_contact-form.scss
@@ -82,7 +82,6 @@
   margin: 4px 0 0 0;
   font-size: 0.85rem;
   color: #384050;
-  opacity: 0.7;
   text-align: right;
 }
 
