--- a/frontend/src/styles/components/_fiche-hero.scss
+++ b/frontend/src/styles/components/_fiche-hero.scss
@@ -39,7 +39,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #0074C7;
+  color: #00497C;
   font-size: 0.9rem;
 
   @media (min-width: 768px) {
